--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "geoff",
+  "name": "jiffy",
   "version": "1.0.0",
-  "description": "cool bot for stuy hacks",
+  "description": "Slack App",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "botkit": "^0.6.7",
-    "express": "^4.16.2"
+    "botkit": "^0.6.7"
+  },
+  "scripts": {
+    "jiffy": "node index.js port=5000"
   }
 }
